--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -8,7 +8,7 @@ section.main {
   @include outer-container;
 }
 .container_outer {
-  padding: 0 1em;
+  padding: 0 $outter_padding;
 }
 
 h1 {
